# cosmic-clipboard-manager

./: Cargo.toml  LICENSE  README.md  build-deb.sh  install.sh
.github/workflows/: ci.yml  release.yml
desktop/: clipmgr-autostart.desktop  clipmgr.desktop  postinst.sh
src/: clipboard_monitor.rs  db.rs  hotkey.rs  main.rs  tray.rs  ui.rs
