[package]
name = "clipmgr"
version = "0.1.0"
edition = "2021"
description = "A system clipboard manager for COSMIC/Linux"
authors = ["Meherab"]
license = "MIT"

[package.metadata.deb]
maintainer = "Meherab"
copyright = "2026, Meherab"
license-file = ["LICENSE", "0"]
extended-description = """\
clipmgr is a lightweight clipboard history manager for Linux.
It lives in the system tray, stores up to 100 text and image entries
in a local SQLite database, supports pinning favourite clips, and can
be opened with a global hotkey (Super+V) or by clicking the tray icon."""
depends = "$auto, libdbus-1-3, libwayland-client0, libxkbcommon0"
section = "utils"
priority = "optional"
assets = [
    # Binary
    ["target/release/clipmgr", "usr/bin/clipmgr", "755"],
    # Desktop entry (shown in app launcher)
    ["desktop/clipmgr.desktop", "usr/share/applications/clipmgr.desktop", "644"],
    # Autostart entry (starts on login)
    ["desktop/clipmgr-autostart.desktop", "etc/xdg/autostart/clipmgr.desktop", "644"],
]

[[bin]]
name = "clipmgr"
path = "src/main.rs"

[dependencies]
# Clipboard access (Wayland + X11)
arboard = { version = "3", features = ["wayland-data-control"] }

# SQLite storage
rusqlite = { version = "0.31", features = ["bundled"] }

# System tray (StatusNotifierItem / SNI)
ksni = "0.2"

# GUI toolkit (same as COSMIC)
iced = { version = "0.13", features = ["image", "tokio"] }

# Global hotkey
global-hotkey = "0.6"

# Image handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 for image storage
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Shared state
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
